# ur5e_cell

cell_description/: CMakeLists.txt  package.xml
cell_description/launch/: display.launch  gazebo.launch
cell_description/meshes/: base_link.STL
cell_description/urdf/: cell_description.csv  cell_description.urdf  cell_description.xacro
ur5_cell_moveit_config/launch/: robot.launch.py
ur5e_cell_bringup/: CMakeLists.txt
ur5e_cell_bringup/launch/: ur5e_cell_bringup.launch.py
ur5e_cell_description/: CMakeLists.txt
ur5e_cell_description/launch/: view_ur_cell.launch.py
ur5e_cell_description/urdf/: workcell.urdf.xacro
workcell_description/config/: initial_positions.yaml
workcell_description/urdf/: workcell.urdf.xacro
workcell_msa_config/: .setup_assistant
workcell_msa_config/config/: ros2_controllers.yaml
workcell_msa_config/launch/: demo.launch.bkp.py  demo.launch.py
